# optimind

./: docker-compose.yaml  usecase.md
egress/: config.yaml
frontend/: .env.example  Dockerfile  app-config.ts  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/demo/: page.tsx
frontend/components/: CopyButton.tsx  FlashCard.tsx  FlashCardContainer.1.tsx  FlashCardContainer.tsx  Quiz.tsx  QuizContainer.tsx  SimpleVoiceAssistant.tsx  TranscriptionView.tsx
frontend/components/agents-ui/: agent-audio-visualizer-aura.tsx  agent-control-bar.tsx  agent-data-panel.tsx  agent-rpc-provider.tsx
frontend/components/ai-elements/: MessageBranchContent.tsx  message.tsx
frontend/constants/: index.ts
frontend/hooks/: useAgentErrors.tsx  useWebRTC.ts
frontend/lib/: browser-format.ts  scenarios.ts
frontend/types/: index.ts  pipecat-client-js.d.ts
server/: .env  .gitignore  Dockerfile  README.md  livekit.toml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  test.py  utils.py
server/agents/: __init__.py  base.py  common.py  front_desk.py  frontdesk.py  general_purpose.py  help_desk_partner.py  insurance_feedback.py  medical_appointment.py  medical_examinar.py  medical_officer.py  prompts.py  reminder_agent.py  resturant_agent.py  study_partner.py  tools.py
server/agents/lib/: __init__.py  appointment.py  exam.py  feedback.py  reminder.py
server/client/: appointment_db.py  storage.py
server/src/: index.ts
server/src/agents/: medical.ts
server/utils/: helper.py  patch.py
(+23 files in other folders)
