[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.73.1",
    "livekit>=1.1.8",
    "livekit-agents[anam,google,openai]>=1.5.10",
    "livekit-plugins-ai-coustics==0.2.14",
    "livekit-plugins-google>=1.5.10",
    "livekit-plugins-turn-detector>=1.5.10",
    "livekit-protocol>=1.1.8",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.41",
    "tzdata>=2026.1",
]
